# berean-standard-bible

./: .gitignore  .npmrc  .prettierignore  .prettierrc  AGENTS.md  LICENSE  PLAN.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md
.github/instructions/: a11y.instructions.md  commit-message.instructions.md  performance.instructions.md  security.instructions.md  setup-and-validation.instructions.md  typescript-react.instructions.md
.github/workflows/: copilot-setup-steps.yml
bsb_usfm/: en.ldml
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: BookCard.tsx  ChapterView.tsx  Navigation.tsx  SearchBar.tsx  SearchResults.tsx  ThemeToggle.tsx  VerseText.tsx
src/hooks/: useBibleData.ts  useScrollDirection.ts  useSearch.ts  useSettings.ts
src/lib/: bible-data.ts  search.ts  settings.ts  usfm.ts
src/routes/: __root.tsx  index.tsx  settings.tsx
src/routes/book/: $bookId.tsx
src/styles/: app.css
src/types/: bible.ts
types/: usfm-js.d.ts
